<?xml version="1.0"?>
<package format="2">
  <name>joystick_msgs</name>
  <version>0.0.0</version>
  <description>The joystick_msgs package</description>

  <maintainer email="philipp.rothenhaeusler@gmail.com">Philipp Rothenhäusler</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
